--- a/Random.ipynb
+++ b/Random.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlLswZiwsV/IGGDIZFz3X7"
+      "authorship_tag": "ABX9TyNtwYMcUNSMfb1yuUIsnZlK"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,7 +24,7 @@
       "metadata": {
         "id": "u9Od_DlxP8ZT"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -39,7 +39,7 @@
         "id": "kE0PSldEQE_V",
         "outputId": "885fd264-f483-4fcc-d5d6-71c1d3408c4e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "EmUdShERQHBh"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,7 +74,7 @@
         "id": "jauWw7EKQ1G5",
         "outputId": "39d8b0a8-ced8-4aed-ca00-f3fa969598be"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,7 +94,7 @@
       "metadata": {
         "id": "cXkGvX1PQ2zv"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
         "id": "BAbtDgULRk8P",
         "outputId": "d3d8b55a-8cd9-4d50-c982-d1ee95699429"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
       "metadata": {
         "id": "qXAMJsCmRvAe"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
         "id": "UVU2X4vMSf8M",
         "outputId": "28414b17-83d1-4a70-d4b7-31570c3116d4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "7gOq-uI2TZP_"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -212,7 +212,7 @@
         "id": "1OeFr5ZpUlM8",
         "outputId": "650cd337-770d-405b-9095-7f58c630014e"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,51 +228,141 @@
     {
       "cell_type": "code",
       "source": [
-        "def rev(s):\n",
-        "  print(\"The reversed number is:\",s)"
+        "def evensum(s):\n",
+        "  s=0\n",
+        "  for i in range(0,10):\n",
+        "    if l[i]%2==0:\n",
+        "      s=s+l[i]\n",
+        "    else:\n",
+        "      continue\n",
+        "  print(\"The sum of even numbers in the list is:\",s)\n",
+        "def oddsum(S):\n",
+        "  S=0\n",
+        "  for j in range(0,10):\n",
+        "    if l[j]%2!=0:\n",
+        "      S=S+l[j]\n",
+        "    else:\n",
+        "      continue\n",
+        "  print(\"The sum of odd numbers in the list is:\",S)"
       ],
       "metadata": {
         "id": "qh3Di0OYdQKr"
       },
-      "execution_count": 73,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "m=int(input(\"Enter a number:\"))\n",
-        "s=0\n",
-        "while m>0:\n",
-        "  r=int(m/10)\n",
-        "  s=(s*10+r)/100\n",
-        "rev()"
+        "l=[21,23,34,54,65,76,78,89,9,21]\n",
+        "evensum(l)\n",
+        "oddsum(l)"
       ],
       "metadata": {
+        "id": "-_Sw35emjaSF",
+        "outputId": "2c208e94-2005-437a-c71f-867b75a0b105",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 252
-        },
-        "id": "muI_xpRciiPS",
-        "outputId": "eb75218f-874a-4b50-fb3a-1f036a5426f4"
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 79,
+      "execution_count": 16,
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Enter a number:34\n"
+            "The sum of even numbers in the list is: 242\n",
+            "The sum of odd numbers in the list is: 228\n"
           ]
-        },
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def even(s):\n",
+        "  s=[]\n",
+        "  c=0\n",
+        "  for i in range(0,10):\n",
+        "    if l[i]%2==0:\n",
+        "      s.append(l[i])\n",
+        "  print(\"The even list is:\",s)\n",
+        "def odd(S):\n",
+        "  S=[]\n",
+        "  for j in range(0,10):\n",
+        "    if l[j]%2!=0:\n",
+        "      S.append(l[j])\n",
+        "  print(\"The odd list is:\",S)"
+      ],
+      "metadata": {
+        "id": "S-2aBE-6bFDY"
+      },
+      "execution_count": 29,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "l=[21,23,34,54,65,76,78,89,9,21]\n",
+        "even(l)\n",
+        "odd(l)"
+      ],
+      "metadata": {
+        "id": "4brAe5tkdDku",
+        "outputId": "317f8339-1a6b-4401-de71-486ae02055a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
         {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-79-37a16e1a2005>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter a number:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mm\u001b[0m\u001b[0;34m>\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m   \u001b[0mr\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The even list is: [34, 54, 76, 78]\n",
+            "The odd list is: [21, 23, 65, 89, 9, 21]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s=\"Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentatinee\"\n",
+        "print(\"String with vowels   :\",s)\n",
+        "l=[]\n",
+        "S=\"\"\n",
+        "c=0\n",
+        "for i in range(0,len(s)):\n",
+        "  l.append(s[i])\n",
+        "for i in range(0,len(l)):\n",
+        "  if l[i]==\"e\" or l[i]==\"u\" or l[i]==\"E\" or l[i]==\"U\" or l[i]==\"a\" or l[i]==\"A\" or l[i]==\"I\" or l[i]==\"i\" or l[i]==\"o\" or l[i]==\"O\":\n",
+        "    c=c+1\n",
+        "for i in range(0,(len(l)+1)-(c-2)):\n",
+        "  if l[i]==\"e\" or l[i]==\"u\" or l[i]==\"E\" or l[i]==\"U\" or l[i]==\"a\" or l[i]==\"A\" or l[i]==\"i\" or l[i]==\"I\" or l[i]==\"o\" or l[i]==\"O\":\n",
+        "    del l[i]\n",
+        "  else:\n",
+        "    continue\n",
+        "for i in range(0,len(l)-1):\n",
+        "  S=S+l[i]\n",
+        "print(\"String without vowels:\",S)\n"
+      ],
+      "metadata": {
+        "id": "lZRNAKwedYad",
+        "outputId": "1672ca9e-6db5-4627-bec7-52aea34694c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "String with vowels   : Python is a high-level, general-purpose programming language. Its design philosophy emphasizes code readability with the use of significant indentatinee\n",
+            "String without vowels: Pythn s  hgh-lvl, gnrl-prps prgrmmng lngag. ts dsgn phlsphy mphszs cd radblty wth th s f sgnfcnt ndnttn\n"
           ]
         }
       ]
@@ -281,7 +371,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "-_Sw35emjaSF"
+        "id": "qF0gSMJCojAr"
       },
       "execution_count": null,
       "outputs": []
